# FunctionPloter

./: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp
